--- a/index.html
+++ b/index.html
@@ -10,8 +10,80 @@
 
 </head>
 <body>
-    
+    <!--top Navbar -->
+    <nav class="navbar navbar-expand-sm bg-light font-css">
+        <div class="container">
+        <!-- 
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        -->
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="#">SAVE MORE ON APP</a>
+              <a class="nav-link active" href="#">HaatBazzar DONATES</a>
+              <a class="nav-link active" href="#">SELL ON HaatBazzar</a>
+              <a class="nav-link active" href="#">CUSTOMER CARE</a>
+              <a class="nav-link active" href="#">TRACK MY ORDER</a>
+              <a class="nav-link active" href="#">SIGNUP/LOGIN</a>
+              <a class="nav-link active" href="#">HaatBazzar AFFILIATE PROGRAM</a>
+              <a class="nav-link active" href="#">ভাষা</a>
+            </div>
+          </div>
+        </div>
+    </nav>
 
+    <!-- logo -->
+    <nav class="navbar bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <img src="image/HaatBazzar.png" alt="Bootstrap" width="90">
+          </a>
+        </div>
+    </nav>
+
+
+
+    <!-- FIRST SECTION -->
+    <div id="carouselExampleFade" class="carousel slide carousel-fade container" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="image/1st pic.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="image/2nd pic.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="image/3rd pic furniture.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="image/4th pic.jpg" class="d-block w-100" alt="..">
+          </div>
+          <div class="carousel-item">
+            <img src="image/5th pic.jpg" class="d-block w-100" alt="..">
+          </div>
+          <div class="carousel-item">
+            <img src="image/6th pic.jpg" class="d-block w-100" alt="..">
+          </div>
+          <div class="carousel-item">
+            <img src="image/7th pic.jpg" class="d-block w-100" alt="..">
+          </div>
+          <div class="carouesl-item">
+            <img src="image/8th pic.jpg" class="d-block w-100" alt="..">
+          </div>
+          <div class="carousel-item">
+            <img src="image/9th pic.jpg" class="d-block w-100" alt="..">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+    </div>
 
 
     <!-- bootstrap js linked -->
