--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>HaatBazzar</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
+    <script src="https://kit.fontawesome.com/b08370b0fc.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://kit.fontawesome.com/b08370b0fc.css" crossorigin="anonymous">
 </head>
 <body>
     <!--top Navbar -->
     <nav class="navbar navbar-expand-sm bg-light font-css">
-        <div class="container">
+        <div class="container justify-content-evenly">
         <!-- 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -34,18 +35,36 @@
     </nav>
 
     <!-- logo -->
-    <nav class="navbar bg-light">
-        <div class="container">
-          <a class="navbar-brand" href="#">
-            <img src="image/HaatBazzar.png" alt="Bootstrap" width="90">
-          </a>
+    <nav class="container">
+      <div class="row">
+        <div class="col-lg-2">
+          <nav class="navbar bg-light">
+            <a class="navbar-brand" href="#">
+              <img src="image/HaatBazzar.png" alt="Bootstrap" width="90">
+            </a>
+          </nav>
         </div>
+    
+
+
+      <div class="col-lg-10">
+        <form class="d-flex" role="search">
+          <input class="form-control form-control-sm" type="search" placeholder="Search in HaatBazzar" aria-label="Search">
+          <button class="btn btn-warning" type="submit">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
+          <button class="btn btn-light" type="submit">
+            <i class="fa-solid fa-cart-shopping"></i>
+          </button>
+        </form>
+      </div>
+      </div>
     </nav>
 
 
 
     <!-- FIRST SECTION -->
-    <div id="carouselExampleFade" class="carousel slide carousel-fade container" data-bs-ride="carousel">
+    <div id="carouselExampleFade" class="carousel slide carousel-fade container bg-warning" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="image/1st pic.jpg" class="d-block w-100" alt="...">
@@ -72,8 +91,9 @@
             <img src="image/8th pic.jpg" class="d-block w-100" alt="..">
           </div>
           <div class="carousel-item">
-            <img src="image/9th pic.jpg" class="d-block w-100" alt="..">
+            <img src="image/9th pic.jpg" class="d-block w-100" alt="...">
           </div>
+
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
