man's fashion commit

--- a/index.html
+++ b/index.html
@@ -148,9 +148,17 @@
             </a>
           
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="dropdown-item" href="#">Clothing</a></li>
+              <li><a class="dropdown-item" href="#">Winter Special </a></li>
+              <li><a class="dropdown-item" href="#">Shoes</a></li>
+              <li><a class="dropdown-item" href="#">Muslim Wear</a></li>
+              <li><a class="dropdown-item" href="#">Accessories</a></li>
+              <li><a class="dropdown-item" href="#">Bags</a></li>
+              <li><a class="dropdown-item" href="#">Watches</a></li>
+              <li><a class="dropdown-item" href="#">Eyewear</a></li>
+              <li><a class="dropdown-item" href="#">Jewllery</a></li>
+              <li><a class="dropdown-item" href="#">Latest In Men's Fashion</a></li>
+
             </ul>
           </div>
           
