semi complete 1st part

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">SAVE MORE ON APP</a>
               <a class="nav-link active" href="#">HaatBazzar DONATES</a>
-              <a class="nav-link active" href="#">SELL ON HaatBazzar</a>
+              <a class="nav-link active link-warning" href="#">SELL ON HaatBazzar</a>
               <a class="nav-link active" href="#">CUSTOMER CARE</a>
               <a class="nav-link active" href="#">TRACK MY ORDER</a>
               <a class="nav-link active" href="#">SIGNUP/LOGIN</a>
@@ -63,22 +63,10 @@
 
 
     <!-- FIRST SECTION -->
-    <div class="container d-flex bg-light">
-      <div class="row">
+    <div class="d-flex bg-light container">
+      <div class="row ">
         <div class="css-font lh-1">
           <nav class="nav flex-column">
-            <!-- 
-            <a class="nav-link text-secondary" aria-current="page" href="#">Women's Fashion</a>
-            <a class="nav-link text-secondary" href="#">Watches, Bags, jewllery</a>
-            <a class="nav-link text-secondary" href="#">Men's Fashion</a>
-            <a class="nav-link text-secondary" href="#">Babies & Toys</a>
-            <a class="nav-link text-secondary" href="#">Electronic Devices</a>
-            <a class="nav-link text-secondary" href="#">TV & Home Appliences</a>
-            <a class="nav-link text-secondary" href="#">Electronic Accessories</a>
-            <a class="nav-link text-secondary" href="#">Groceries & pets</a>
-            <a class="nav-link text-secondary" href="#">Home & Lifestyle</a>
-            <a class="nav-link text-secondary" href="#">Sports & Outdoors</a>
-          -->
           <div class="dropdown dropend">
             <a class="btn dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Women's Fashion
@@ -315,7 +303,7 @@
             </a>
           
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">auto Mobiles</a></li>
+              <li><a class="dropdown-item dropdown dropend" href="#">auto Mobiles</a></li>
               <li><a class="dropdown-item" href="#">Auto oils & Fluids</a></li>
               <li><a class="dropdown-item" href="#">Interior Accessories</a></li>
               <li><a class="dropdown-item" href="#">Exterior Accessories</a></li>
@@ -336,9 +324,9 @@
 
       <!-- carousel image -->
       <div>
-        <div id="carouselExampleFade" class="carousel slide carousel-fade container" data-bs-ride="carousel">
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
           <div class="carousel-inner row">
-          <div class="">
+          <div class="container-fluid">
             <div class="carousel-item active">
             <img src="image/1st pic.jpg" class="d-block w-100" alt="...">
             </div>
